--- a/mark-blog/package.json
+++ b/mark-blog/package.json
@@ -9,12 +9,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@kangc/v-md-editor": "^2.3.18",
     "element-plus": "^2.6.2",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.4",
+    "raw-loader": "^4.0.2",
     "vite": "^5.1.6"
   }
 }
