--- a/mark-blog/package.json
+++ b/mark-blog/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@kangc/v-md-editor": "^2.3.18",
     "element-plus": "^2.6.2",
+    "gsap": "^3.12.5",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
   },
