--- a/mark-blog-backend/settings.yaml
+++ b/mark-blog-backend/settings.yaml
@@ -1,28 +1,21 @@
-//配置文件
-
-//数据库配置文件
 mysql:
   host: localhost
   port: 3306
   db: markBlog
   user: root
   password: root
+  config: '?charset=utf8'
   log_level: dev
 
-
-
-//日志配置文件
 logger:
   level: info 
-  prefix: '[mark]'
+  prefix: '[markBlog]'
   director: log
   show_line: true
   log_in_console: true
 
 
-
-//系统配置文件
 system:
   host: "0.0.0.0"
-  prot: 9090
+  port: 8080
   env: dev
