--- a/mark-blog-frontend/package.json
+++ b/mark-blog-frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@element-plus/icons": "^0.0.11",
     "@kangc/v-md-editor": "^2.3.18",
+    "axios": "^1.6.8",
     "element-plus": "^2.6.2",
     "gsap": "^3.12.5",
     "vue": "^3.4.21",
